adds capitilization filter, styles file shared reciept

--- a/client/index.html
+++ b/client/index.html
@@ -61,7 +61,7 @@
       <ul class="nav navbar-nav navbar-right ">
         <li class="dropdown-toggle menu col-sm-pull-2">
           <a class="dropdown-toggle" data-toggle="dropdown">
-            <div class="btn-custom-nav my-account">{{user.username}}</div>
+            <div class="btn-custom-nav my-account">{{ user.username | capitalize }}</div>
           </a>
           <ul class="dropdown-menu">
             <li><a href="">Settings</a></li>
